--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@
 
 .container {
     background: url(./img/Background.png) no-repeat;
-    background-size: auto;
+    background-size: cover;
     font-family: Oswald, serif;
     position: relative;
     margin: 0 auto;
+    height: 100vh;
 }
 
 .main {
@@ -194,10 +195,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    align-content: space-around;
+    /*align-content: space-around;*/
     flex-wrap: wrap;
     height: 702px;
     width: 1186px;
     margin: auto;
-    /*perspective: 1000px;*/
+    perspective: 1000px;
 }
