--- a/media.css
+++ b/media.css
@@ -57,8 +57,11 @@
         height: 100%;
         padding-top: 25%;
     }
+    .six-card-game,
     .ten-card-game {
         margin: 0 auto;
+        width: 100%;
+        justify-content: center;
         padding-left: 5%;
         padding-right: 5%;
         height: 100%;
@@ -107,6 +110,17 @@
         height: 12px;
         top: 25%;
         left: 27%;
+    }
+    .card-wrapper {
+        height: 227px;
+        width: 145px;
+    }
+    .card-bug,
+    .card-back,
+    .card-gameover {
+        background-size: contain;
+        height: 227px;
+        width: 145px;
     }
 }
 
@@ -157,6 +171,22 @@
         height: 12px;
         left: 18%;
     }
+    .card-wrapper {
+        height: 170px;
+        width: 109px;
+    }
+    .card-bug,
+    .card-back,
+    .card-gameover {
+        background-size: contain;
+        height: 170px;
+        width: 109px;
+    }
+    .six-card-game,
+    .ten-card-game {
+        padding-top: 25%;
+        padding-bottom: 25%;
+    }
 }
 
 @media (max-width: 600px) {
@@ -174,6 +204,22 @@
     .level:active::before,
     .level_active:before {
         left: 10%;
+    }
+    .card-wrapper {
+        height: 85px;
+        width: 54px;
+    }
+    .card-bug,
+    .card-back,
+    .card-gameover {
+        background-size: contain;
+        height: 85px;
+        width: 54px;
+    }
+    .six-card-game,
+    .ten-card-game {
+        padding-top: 35%;
+        padding-bottom: 35%;
     }
 }
 
